--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-slate
-title: SEAS LLM Workshop 2024
+title: UVA LLM Workshop 2024
 description: The UVA SEAS Workshop on Large Language Models for Sciencie and Engineering
 github:
   is_project_page: true
