--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-slate
 title: UVA LLM Workshop 2024
-description: The UVA Workshop on Large Language Models for Sciencie and Engineering
+description: The UVA Workshop on Large Language Models for Science and Engineering
 github:
   is_project_page: true
   
