--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-slate
-title: The 1st UVA LLM Workshop, Oct 19-20, 2024
-description: The 1st UVA Workshop on Large Language Models for Science and Engineering
+title: UVA LLM Workshop
+description: The 1st UVA Workshop on Large Language Models for Science and Engineering, Oct 19-20, 2024
 github:
   is_project_page: true
   
